# hab-auto-build

./: .gitignore  Cargo.toml  README.md  build.rs  hab-auto-build.json
.github/workflows/: ci.yml
migrations/2023-02-21-090420_init/: down.sql  up.sql
src/: checker.rs  main.rs  server.rs
src/check/: mod.rs
src/check/artifact/: elf.rs  macho.rs  mod.rs  package.rs  script.rs  win.rs
src/check/source/: license.rs  mod.rs
src/cli/: add.rs  analyze.rs  build.rs  changes.rs  check.rs  compare.rs  download.rs  git_sync.rs  mod.rs  output.rs  remove.rs  server.rs
src/core/: artifact.rs  auto_build.rs  crypto_hash.rs  dep_graph.rs  download.rs  fs.rs  git.rs  habitat.rs  mod.rs  package.rs  package_source.rs  plan.rs  repo.rs  source.rs
src/public/: index.html  main.js
src/scripts/: artifact_data_extract.sh  cache_index.sh  extract.sh  plan_data_extract.ps1  plan_data_extract.sh  sandbox-defaults.sb
src/store/: mod.rs  model.rs  schema.rs
