[package]
name = "hab-auto-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
lazy_static = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
kdam = "0.3"
ignore = "0.4"
color-eyre = { version = "0.6", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "native-tls",
    "multipart",
] }
regex = { version = "1" }
sha2 = { version = "0.10" }
petgraph = { version = "0.6" }
# conch-parser = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# compression crates
tar = { version = "0.4" }
bzip2 = { version = "0.4" }
flate2 = { version = "1.0" }
xz2 = { version = "0.1" }
zstd = { version = "0.12" }
globset = { version = "0.4" }
chrono-humanize = { version = "0.2" }
thiserror = { version = "1" }
emoji-printer = "0.4.3"
num_cpus = "1.0"
tempdir = "0.3"
blake3 = { version = "1.3.3", features = ["rayon"] }
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2" }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
goblin = "0.6.0"
infer = "0.12.0"
path-absolutize = "3.0.14"
askalono = "0.4.6"
tera = "*"
snailquote = "0.3.1"
suppaftp = { version = "5.1.0", features = ["native-tls"] }
dirs = "4.0.0"
is-root = "0.1.2"
subprocess = "0.2.9"
indenter = "0.3.3"
toml_edit = { version = "0.19.7", features = ["serde"]}
owo-colors = "3.5.0"
spdx = "0.10.0"
which = "4.4.0"
axum = "0.6.18"
rust-embed = "6.6.1"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] } 
mime_guess = "2.0.4"
filetime = "0.2.21"
rayon = "1.7.0"
# Vendors OpenSSL so we don't have to depend on the system
native-tls = { version = "0.2", features = ["vendored"] }

[build-dependencies]
color-eyre = { version = "0.6", default-features = false }
tar = { version = "0.4" }
flate2 = { version = "1.0.11" }
askalono = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "native-tls",
] }

[profile.release]
strip = true