[package]
name = "hab-auto-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.19", features = ["derive", "env"] }
lazy_static = { version = "1.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
color-eyre = { version = "0.6", default-features = false }
reqwest = { version = "0.12.8", default-features = false, features = [
    "blocking",
    "native-tls",
    "multipart",
] }
regex = { version = "1" }
sha2 = { version = "0.10" }
petgraph = { version = "0.6" }
# conch-parser = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# compression crates
tar = { version = "0.4" }
bzip2 = { version = "0.4" }
flate2 = { version = "1.0" }
xz2 = { version = "0.1" }
zstd = { version = "0.13.2" }
globset = { version = "0.4" }
chrono-humanize = { version = "0.2" }
thiserror = { version = "1" }
emoji-printer = "0.4.3"
num_cpus = "1.0"
tempdir = "0.3"
blake3 = { version = "1.5.4", features = ["rayon"] }
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2" }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
goblin = "0.8.0"
infer = "0.16.0"
path-absolutize = "3.0.14"
askalono = "0.4.6"
tera = "*"
snailquote = "0.3.1"
suppaftp = { version = "5.1.0", features = ["native-tls"] }
subprocess = "0.2.9"
indenter = "0.3.3"
toml_edit = { version = "0.22.16", features = ["serde"]}
owo-colors = "4.0.0"
spdx = "0.10.0"
which = "6.0.1"
axum = "0.7.5"
rust-embed = "8.5.0"
tokio = { version = "1.40.0", features = ["full"] }
mime_guess = "2.0.4"
filetime = "0.2.21"
rayon = "1.7.0"
# Vendors OpenSSL so we don't have to depend on the system
native-tls = { version = "0.2", features = ["vendored"] }

habitat_core = { git = "https://github.com/habitat-sh/habitat" }
habitat_common = { git = "https://github.com/habitat-sh/habitat" }
habitat_api_client = { git = "https://github.com/habitat-sh/habitat" }

[build-dependencies]
color-eyre = { version = "0.6", default-features = false }
tar = { version = "0.4" }
flate2 = { version = "1.0.35" }
askalono = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12.8", default-features = false, features = [
    "blocking",
    "native-tls",
] }

[profile.release]
strip = true
